# molpy2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  pyproject.toml  setup.py
.github/: rename_project.sh
cpp/: CMakeLists.txt  main.cpp
cpp/include/: caster.h  util.h  utils.h
cpp/src/: bind_atom.cpp  bind_itemtype.cpp  bind_linalg.cpp
src/molpy2/: __init__.py  atom.py  cppfunc.py  itemtype.py  linalg.py
tests/: conftest.py  test_atom.py  test_bond.py  test_cell.py  test_cpp.py  test_frame.py  test_graph.py  test_itemtype.py  test_linalg.py  test_py.py  test_topology.py  test_trajectory.py
